--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	    <meta name="twitter:card" content="photo" />
 		<meta name="twitter:site" content="@cmd545" />
 		<meta name="twitter:title" content="SoHo Sunrise" />
-		<meta name="twitter:image" content="" />
-		<meta name="twitter:url" content="" />
+		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/sunrise.jpg" />
+		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest/" />
 	    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 	    <script src="js/jquery-1.11.2.min.js"></script>
 	    <script src="js/main.js"></script>
@@ -24,7 +24,7 @@
 				<img src="images/sohogrand.jpg">
 				<img src="images/canalstreet.jpg">
 			</div>
-			<a class="button twitter popup" href="https://twitter.com/intent/tweet?url=&amp;text=">Share on Twitter</a>
+			<a class="button twitter popup" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fspongebobsquaredance.github.io%2Fphototest%2F&amp;text=Check%20out%20this%20cool%20pic">Share on Twitter</a>
 		</section>
 	</body>
 </html>
