--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	    <meta name="twitter:card" content="photo" />
 		<meta name="twitter:site" content="@cmd545" />
 		<meta name="twitter:title" content="SoHo Sunrise" />
+		<meta name="twitter:description" content="7am sunrise in NYC" />
 		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/sunrise.jpg" />
+		<meta name="twitter:image:width" content="1200" />
+		<meta name="twitter:image:height" content="1200" />
 		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest/" />
 	    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 	    <script src="js/jquery-1.11.2.min.js"></script>
