--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	    <title>Photo Test Page</title>
 	    <meta name="twitter:card" content="photo" />
 		<meta name="twitter:site" content="@cmd545" />
-		<meta name="twitter:title" content="SoHo Sunrise" />
-		<meta name="twitter:description" content="7am sunrise in NYC" />
-		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/sunrise.jpg" />
+		<meta name="twitter:title" content="Green Dude Test" />
+		<meta name="twitter:description" content="A description here" />
+		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/greenguy.jpg" />
 		<meta name="twitter:image:width" content="1200" />
-		<meta name="twitter:image:height" content="1200" />
+		<meta name="twitter:image:height" content="600" />
 		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest/" />
 	    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 	    <script src="js/jquery-1.11.2.min.js"></script>
@@ -27,6 +27,7 @@
 				<img src="images/sohogrand.jpg">
 				<img src="images/canalstreet.jpg">
 			</div>
+			<img src="images/greenguy.jpg">
 			<a class="button twitter popup" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fspongebobsquaredance.github.io%2Fphototest%2F&amp;text=Check%20out%20this%20cool%20pic">Share on Twitter</a>
 		</section>
 	</body>
