Added ?4362984378 to end of URL for cache

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<meta name="twitter:site" content="@cmd545" />
 		<meta name="twitter:title" content="Green Dude Test" />
 		<meta name="twitter:description" content="A description here" />
-		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/greenguy.jpg" />
+		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/greenguy.jpg?4362984378" />
 		<meta name="twitter:image:width" content="1200" />
 		<meta name="twitter:image:height" content="600" />
-		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest/" />
+		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest?4362984378" />
 	    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 	    <script src="js/jquery-1.11.2.min.js"></script>
 	    <script src="js/main.js"></script>
