Added og meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <title>Photo Test Page</title>
+	    <meta property="og:url" content="http://spongebobsquaredance.github.io/phototest?4362984378" />
+		<meta property="og:image" content="http://spongebobsquaredance.github.io/phototest/images/greenguy.jpg?4362984378" />
+		<meta property="og:image:type" content="image/jpg" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="600" />
+		<meta property="og:title" content="The title goes here" />
+		<meta property="og:description" content="The description of the photo goes here. It can be a couple of sentences" />
+		<meta property="og:site_name" content="Photo Test Site" />
 	    <meta name="twitter:card" content="photo" />
 		<meta name="twitter:site" content="@cmd545" />
 		<meta name="twitter:title" content="Green Dude Test" />
@@ -27,8 +35,13 @@
 				<img src="images/sohogrand.jpg">
 				<img src="images/canalstreet.jpg">
 			</div>
-			<img src="images/greenguy.jpg">
-			<a class="button twitter popup" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fspongebobsquaredance.github.io%2Fphototest%2F&amp;text=Check%20out%20this%20cool%20pic">Share on Twitter</a>
+			<div class="image-container">
+				<img src="images/greenguy.jpg">
+			</div>
+			<div class="button-container">
+				<a class="button twitter popup" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fspongebobsquaredance.github.io%2Fphototest%2F&amp;text=Check%20out%20this%20cool%20pic">Share on Twitter</a>
+				<a class="button popup" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fspongebobsquaredance.github.io%2Fphototest%2F">Share on Facebook</a>
+			</div>
 		</section>
 	</body>
 </html>
