--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <title>Photo Test Page</title>
-	    <meta property="og:url" content="http://spongebobsquaredance.github.io/phototest?4362984256" />
-		<meta property="og:image" content="http://spongebobsquaredance.github.io/phototest/images/largegreen.jpg?4362984256" />
+	    <meta property="og:url" content="http://spongebobsquaredance.github.io/phototest?4362984269" />
+		<meta property="og:image" content="http://spongebobsquaredance.github.io/phototest/images/green400.jpg?4362984269" />
 		<meta property="og:image:type" content="image/jpg" />
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="1200" />
+		<meta property="og:image:width" content="500" />
+		<meta property="og:image:height" content="500" />
 		<meta property="og:title" content="The title goes here" />
 		<meta property="og:description" content="The description of the photo goes here. It can be a couple of sentences" />
 		<meta property="og:site_name" content="Photo Test Site" />
@@ -16,10 +16,10 @@
 		<meta name="twitter:site" content="@cmd545" />
 		<meta name="twitter:title" content="Green Dude Test" />
 		<meta name="twitter:description" content="A description here" />
-		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/largegreen.jpg?4362984256" />
-		<meta name="twitter:image:width" content="1200" />
-		<meta name="twitter:image:height" content="1200" />
-		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest?4362984256" />
+		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/green400.jpg?4362984269" />
+		<meta name="twitter:image:width" content="500" />
+		<meta name="twitter:image:height" content="500" />
+		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest?4362984269" />
 	    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 	    <script src="js/jquery-1.11.2.min.js"></script>
 	    <script src="js/main.js"></script>
@@ -36,7 +36,7 @@
 				<img src="images/canalstreet.jpg">
 			</div>
 			<div class="image-container">
-				<img src="images/largegreen.jpg">
+				<img src="images/green400.jpg">
 			</div>
 			<div class="button-container">
 				<a class="button twitter popup" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fspongebobsquaredance.github.io%2Fphototest%2F&amp;text=Check%20out%20this%20cool%20pic">Share on Twitter</a>
