--- a/index.html
+++ b/index.html
@@ -4,22 +4,18 @@
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <title>Photo Test Page</title>
-	    <meta property="og:url" content="http://spongebobsquaredance.github.io/phototest?4362969" />
-		<meta property="og:image" content="http://spongebobsquaredance.github.io/phototest/images/green300.jpg?4362969" />
+	    <meta property="og:url" content="http://spongebobsquaredance.github.io/phototest" />
+		<meta property="og:image" content="http://spongebobsquaredance.github.io/phototest/images/sunrise.jpg" />
 		<meta property="og:image:type" content="image/jpg" />
-		<meta property="og:image:width" content="300" />
-		<meta property="og:image:height" content="300" />
 		<meta property="og:title" content="The title goes here" />
-		<meta property="og:description" content="The description of the photo goes here. It can be a couple of sentences" />
+		<meta property="og:description" content="The description of the photo goes here. It can be a couple of sentences. Here's a coupon: http://t.co/yaqyeemZqL" />
 		<meta property="og:site_name" content="Photo Test Site" />
 	    <meta name="twitter:card" content="photo" />
 		<meta name="twitter:site" content="@cmd545" />
 		<meta name="twitter:title" content="Green Character Test" />
 		<meta name="twitter:description" content="A description here, some words" />
-		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/green300.jpg?4362969" />
-		<meta name="twitter:image:width" content="300" />
-		<meta name="twitter:image:height" content="300" />
-		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest?4362969" />
+		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/sunrise.jpg" />
+		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest" />
 	    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 	    <script src="js/jquery-1.11.2.min.js"></script>
 	    <script src="js/main.js"></script>
@@ -32,11 +28,6 @@
 			</header>
 			<div class="image-container">
 				<img src="images/sunrise.jpg">
-				<img src="images/sohogrand.jpg">
-				<img src="images/canalstreet.jpg">
-			</div>
-			<div class="image-container">
-				<img src="images/green300.jpg">
 			</div>
 			<div class="button-container">
 				<a class="button twitter popup" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fspongebobsquaredance.github.io%2Fphototest%2F&amp;text=Check%20out%20this%20cool%20pic">Share on Twitter</a>
