--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <title>Photo Test Page</title>
 	    <meta property="og:url" content="http://spongebobsquaredance.github.io/phototest" />
-		<meta property="og:image" content="http://spongebobsquaredance.github.io/phototest/images/sunrise2.jpg" />
+		<meta property="og:image" content="http://spongebobsquaredance.github.io/phototest/images/redcard.jpg" />
 		<meta property="og:image:type" content="image/jpg" />
 		<meta property="og:title" content="The title goes here" />
 		<meta property="og:description" content="The description of the photo goes here. It can be a couple of sentences. Here's a coupon: http://t.co/yaqyeemZqL" />
@@ -14,7 +14,7 @@
 		<meta name="twitter:site" content="@cmd545" />
 		<meta name="twitter:title" content="Green Character Test" />
 		<meta name="twitter:description" content="A description here, some words" />
-		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/sunrise2.jpg" />
+		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/redcard.jpg" />
 		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest" />
 	    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 	    <script src="js/jquery-1.11.2.min.js"></script>
@@ -27,7 +27,7 @@
 				<h2>Image API test page</h2>
 			</header>
 			<div class="image-container">
-				<img src="images/sunrise2.jpg">
+				<img src="images/redcard.jpg">
 			</div>
 			<div class="button-container">
 				<a class="button twitter popup" href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fspongebobsquaredance.github.io%2Fphototest%2F&amp;text=Check%20out%20this%20cool%20pic">Share on Twitter</a>
