Added unique query string for Facebook cache

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <title>Photo Test Page</title>
-	    <meta property="og:url" content="http://spongebobsquaredance.github.io/phototest" />
-		<meta property="og:image" content="http://spongebobsquaredance.github.io/phototest/images/redcard.jpg" />
+	    <meta property="og:url" content="http://spongebobsquaredance.github.io/phototest?123784987" />
+		<meta property="og:image" content="http://spongebobsquaredance.github.io/phototest/images/redcard.jpg?123784987" />
 		<meta property="og:image:type" content="image/jpg" />
 		<meta property="og:title" content="The title goes here" />
 		<meta property="og:description" content="The description of the photo goes here. It can be a couple of sentences. Here's a coupon: http://t.co/yaqyeemZqL" />
@@ -14,8 +14,8 @@
 		<meta name="twitter:site" content="@cmd545" />
 		<meta name="twitter:title" content="Green Character Test" />
 		<meta name="twitter:description" content="A description here, some words" />
-		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/redcard.jpg" />
-		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest" />
+		<meta name="twitter:image" content="http://spongebobsquaredance.github.io/phototest/images/redcard.jpg?123784987" />
+		<meta name="twitter:url" content="http://spongebobsquaredance.github.io/phototest?123784987" />
 	    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 	    <script src="js/jquery-1.11.2.min.js"></script>
 	    <script src="js/main.js"></script>
